--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,9 @@ Developers & Contributers
 - ChrstphrR (CR)
 
 --------------------------------------------------------------------------------
+- Rev 360 -
+[2007/10/30] RaX - Swapped out TList for TObjectList pas Tsusai's suggestion(good find! =P)
+-
 
 - Rev 359 -
 [2007/10/30] RaX - Fixed broken build, Added InventoryList.pas
