--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 363 -
+[2007/11/24] Aeomin - Added GM command #effect
+-
+
 - Rev 362-
 [2007/11/12] Aeomin - Note: 10 days after last commit =(
 [2007/11/12] Thanks RabidChocobo for the patch/implementation.
@@ -23,7 +27,7 @@ Developers & Contributers
 [2007/11/12] #BroadCastB[Blue], #BroadCastW[White]
 -
 
-- Rev 361-
+- Rev 361 -
 [2007/11/2] Aeomin - Clean up for Character.pas (I know.. it's crazy and very large file.. my hands are sore...)
 -
 
