--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 370 -
+[2007/12/08] Aeomin - Overview: Friendlist support Part 2.
+-
+
 - Rev 369 -
 [2007/12/08] Aeomin - Overview: Friendlist support Part 1.
 Yes, it is a big update...
