- Rev 375 - [2007/12/23] RaX - Thanks to both myself and Aeomin, the InterClient now auto-reconnects  on disconnection! I took his partial code and modified like 3 lines to get it working.  CommClient now has a TReconnector, a thread which is fired on disconnect and  loops until it reconnects or is killed on the tinterclient's destroy. -

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,13 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 375 -
+[2007/12/23] RaX - Thanks to both myself and Aeomin, the InterClient now auto-reconnects
+ on disconnection! I took his partial code and modified like 3 lines to get it working.
+ CommClient now has a TReconnector, a thread which is fired on disconnect and
+ loops until it reconnects or is killed on the tinterclient's destroy.
+-
+
 - Rev 374 -
 [2007/12/23] Aeomin - Not much, some tab clean ups and console command fixes made
  during the attempt of failure reconnect routine.
