--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 377 -
+[2007/12/23] Aeomin - Removed messages used to debug...
+-
+
 - Rev 376 -
 [2007/12/23] RaX - Left part of a patch from Tsusai in, removed. Updated version.pas too.
 -
