--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 379 -
+[2007/12/23] RaX - ok, THIS TIME I Fixed a leftover bug from how the inter client 
+used to work, it caused the server to av if the connection was forcibly broken.
+-
+
 - Rev 378 -
 [2007/12/23] RaX - Fixed a leftover bug from how the inter client used to work,
  it cause the server to av if the connection was forcibly broken.
