--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 383 -
+[2007/12/23] Tsusai - Commented and reindented many units.
+-
+
 - Rev 382 -
 [2007/12/23] RaX - Added SQLExtendedRoutines to /Common, will contain extra sql
  related routines.
