--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 395 -
+[2007/12/27] Aeomin - OK ok, i don't know when i start to code this..
+Now online/offline status works.. [a lot files is modified..] 
+-
+
 - Rev 394 -
 [2007/12/26] RaX - Continuous attacking now works using attackevents...
  Still have more work to do with it though, cleanup, and making sure that when
