--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,13 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 404 -
+[2007/12/30] Aeomin - Note: This update requires update in script to order to work.
+[2007/12/30] Aeomin - Added 8 character constant for getvar.
+   [VAR_CURXPOS,VAR_CURYPOS,VAR_CLEVEL,VAR_JOB,
+    VAR_JOBLEVEL,VAR_MONEY,VAR_SEX,VAR_SPPOINT]
+-
+
 - Rev 403 -
 [2007/12/30] RaX - Added check for charastate before attacking...we don't want to
  be able to attack dead people...
