--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 406 -
+[2007/12/31] Aeomin - Added 12 more of character constants.
+-
+
 - Rev 405 -
 [2007/12/30] Aeomin - Again, need update script =)
 [2007/12/30] Aeomin - Yet, added 12 more of character constants (Total 20 now)
