--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 407 -
+[2007/12/31] Aeomin - Added 6 more of character constants.
+-
+
 - Rev 406 -
 [2007/12/31] Aeomin - Added 12 more of character constants.
 -
