--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 408 -
+[2007/12/31] Aeomin - last one.. (rly) added another 2 more.
+-
+
 - Rev 407 -
 [2007/12/31] Aeomin - Added 6 more of character constants.
 -
