--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 416 -
+[2008/01/01] RaX - The first commit of the new year! Fixed leaking beings when
+warping to save point. ZoneServer.pas Disconnect.
+-
+
 - Rev 415 -
 [2007/12/31] Aeomin - Added script function "showimage".
 XD
